<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    android:theme="@style/AppTheme"
    android:id="@+id/drawerLayout">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/relLayoutMain">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:padding="20dp"
        android:background="@color/green"
        android:id="@+id/navBar"
        >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableLeft="@drawable/menu_icon"
            android:drawableTint="@color/white"
            android:textColor="@color/white"
            android:id="@+id/menuopenBtn"
            android:layout_marginRight="10dp"
            android:scaleType="centerCrop"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:textAllCaps="true"
            android:text="COWIN NOTIFIER"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="12sp"
            android:textColor="@color/lightgrey"
            android:textAllCaps="true"
            android:text="For India"
            android:layout_marginLeft="5dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:textStyle="bold" />

    </LinearLayout>
        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:icon="@drawable/arrow_up_icon"
            android:backgroundTint="@color/red"
            android:clickable="true"
            android:gravity="center"
            app:iconTint="@color/white"
            android:textAlignment="center"
            android:id="@+id/scrollToTopButton"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="50dp"

            />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/navBar"
        android:background="@color/colorPrimary"
        android:id="@+id/scrollViewMain"
        android:layout_above="@id/bannerAd3"

        >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/bannerAd1" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="match_parent"
                android:text=""
                android:background="@drawable/back_select"
                android:id="@+id/backSelect"

                />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="match_parent"
                android:text=""

                />

        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/search_pincode"
                    android:layout_weight="1"
                    android:id="@+id/searchPincode"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:textColor="@color/white"

                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/search_district"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    android:id="@+id/searchDistrict"/>

            </LinearLayout>
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/pinView">
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1">
            <EditText
                android:id="@+id/pinBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:outlineSpotShadowColor="@color/green"
                android:shadowColor="@color/green"
                android:hint="@string/enter_pincode"
                android:inputType="number"
                android:maxLength="6"
                android:textColorHighlight="@color/green"

                />

        </com.google.android.material.textfield.TextInputLayout>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/searchBtnTxt"
                    android:id="@+id/searchVaccineFromPin"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="@color/darkgreen"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/distView">
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1">

            <AutoCompleteTextView
                android:id="@+id/stateList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/choose_state"
                android:inputType="none"
                android:text="@string/choose_state" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:id="@+id/distLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1">

            <AutoCompleteTextView
                android:id="@+id/districtList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/choose_district"
                android:inputType="none"
                android:text="@string/choose_district" />
        </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/searchBtnTxt"
                    android:id="@+id/searchVaccineFromDistrict"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="@color/darkgreen"/>

            </LinearLayout>
        </FrameLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="NOTIFICATION Off"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:backgroundTint="@color/primary3"
                android:drawableLeft="@drawable/notification_off_icon"
                android:textSize="12sp"
                android:id="@+id/toggleNotificationButton"
                android:drawableTint="@color/white"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Schedule Now"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:backgroundTint="@color/purple_700"
                android:drawableLeft="@drawable/open_outside_icon"
                android:textSize="12sp"
                android:id="@+id/openCowinSiteButton"
                android:drawableTint="@color/white"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/bannerAd2" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/slotInfo"
            android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/darkgreen"
            android:textStyle="bold"
            android:text="SELECT FILTERS :" />
        <HorizontalScrollView
            android:id="@+id/scroller"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fadingEdgeLength="5dip"
            android:scrollbars="none"
            android:overScrollMode="always"
            android:isScrollContainer="true"
            android:scrollbarAlwaysDrawHorizontalTrack="true"
            >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:text="18+"
                android:id="@+id/filter18plus"
                android:textColor="@color/black"
                android:backgroundTint="@color/lightgrey"
                />


            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:text="45+"
                android:id="@+id/filter45plus"
                android:textColor="@color/black"
                android:backgroundTint="@color/lightgrey"
                />


            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:text="Covishield"
                android:id="@+id/filterCovishield"
                android:backgroundTint="@color/lightgrey"
                android:textColor="@color/black" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:text="Covaxin"
                android:id="@+id/filterCovaxin"
                android:backgroundTint="@color/lightgrey"
                android:textColor="@color/black"
/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:text="Sputnik V"
                android:id="@+id/filterSputnikV"
                android:backgroundTint="@color/lightgrey"
                android:textColor="@color/black" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:text="Free"
                android:id="@+id/filterFree"
                android:backgroundTint="@color/lightgrey"
                android:textColor="@color/black"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:text="Paid"
                android:id="@+id/filterPaid"
                android:backgroundTint="@color/lightgrey"
                android:textColor="@color/black"/>

        </LinearLayout>
        </HorizontalScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Dose 1"
                    android:layout_weight="1"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:textStyle="bold"
                    android:textAllCaps="true"
                    android:id="@+id/filterDose1Btn"/>

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Dose 2"
                    android:layout_weight="1"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:textStyle="bold"
                    android:textAllCaps="true"
                    android:id="@+id/filterDose2Btn"/>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:descendantFocusability="blocksDescendants">
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:id="@+id/availableVaccineCenters" />


            </RelativeLayout>





        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/animationBox"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="No Internet Connection"
                android:id="@+id/animTitle"
                android:textSize="30sp"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/darkgreen"
                android:textAlignment="center"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="No Internet Connection"
                android:id="@+id/animSubTitle"
                android:textSize="15sp"
                android:gravity="center"
                android:textStyle="italic"
                android:textColor="@color/green"
                android:textAlignment="center"
                android:layout_marginTop="5dp"
                />
            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:id="@+id/jsonAnim"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/no_internet"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Try Again"
                android:textColor="@color/white"
                android:backgroundTint="@color/primary3"
                android:id="@+id/animButton"
                android:textSize="20sp"
                android:drawableRight="@drawable/retry"
                android:drawableTint="@color/white"
                />


        </LinearLayout>







    </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/bannerAd3"
        android:layout_alignParentBottom="true"
        />
    </RelativeLayout>

<!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
<!--        android:id="@+id/floatingActionButton"-->
<!--        android:layout_width="50dp"-->
<!--        android:layout_height="50dp"-->
<!--        android:maxWidth="50dp"-->
<!--        android:maxHeight="50dp"-->
<!--        android:clickable="true"-->
<!--        android:layout_marginRight="10dp"-->
<!--        android:src="@drawable/home_icon"-->
<!--        android:textAlignment="center"-->
<!--        android:gravity="center" />-->



    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/navigationView"
        app:headerLayout="@layout/side_menu_header"
        app:menu="@menu/side_menu"
        android:layout_gravity="start"
        />

</androidx.drawerlayout.widget.DrawerLayout>

